# Lenia.c

./: .gitignore  CMakeLists.txt  README.md  TODO_FEATURES.md
benchmark/: results.json  run_benchmark.py
include/: lenia_analysis.h  lenia_analyzer.h  lenia_app.h  lenia_automaton.h  lenia_board.h  lenia_cppn.h  lenia_discovery.h  lenia_multichannel.h  lenia_particle.h  lenia_recorder.h
src/: fftw_runtime.h  lenia_analysis.cpp  lenia_analyzer.cpp  lenia_app.cpp  lenia_automaton.cpp  lenia_board.cpp  lenia_cppn.cpp  lenia_discover_cli.cpp  lenia_discovery.cpp  lenia_gui_x11.cpp  lenia_multichannel.cpp  lenia_particle.cpp  lenia_recorder.cpp  lenia_server_mode.cpp  main.cpp  test_analysis.cpp  test_multichannel.cpp  test_particle.cpp
ui/: index.html  package.json  test_wasd.html  vite.config.js
ui/api/: server.mjs
ui/src/: App.jsx  styles.css
